# pyrose

./: .gitignore  README.md  dev-run.py  io.github.vanillajonathan.pyrose.json  meson.build  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
data/: io.github.vanillajonathan.pyrose.desktop.in  io.github.vanillajonathan.pyrose.gschema.xml  io.github.vanillajonathan.pyrose.metainfo.xml.in  io.github.vanillajonathan.pyrose.service.in  meson.build
data/icons/: meson.build
help/: meson.build
help/C/: index.page  javascript.page  legal.xml  perl.page  python.page  symbols.page
po/: POTFILES.in  meson.build
src/: code_view.blp  code_view.py  completion_provider.py  helpers.py  hover_provider.py  lsp_client.py  main.py  meson.build  pango_utils.py  preferences.blp  preferences.py  pyrose.gresource.xml  pyrose.in  shortcuts.blp  style-dark.css  style.css  symbol_chooser.blp  symbol_chooser.py  terminal.blp  terminal.py  window.blp  window.py
src/gtk/: help-overlay.blp
subprojects/: blueprint-compiler.wrap
